# langchain-kubernetes

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
docs/: langgraph-integration.md  openshift.md  reaper-cronjob.yaml  warm-pool.yaml
python/: CHANGELOG.md  README.md  pyproject.toml
python/examples/: basic_usage.py  with_deepagents.py
python/examples/k8s/: sandbox-template.yaml  warm-pool.yaml
python/langchain_kubernetes/: __init__.py  _k8s_http.py  _labels.py  _provider_base.py  _types.py  _utils.py  config.py  exec_transport.py  manager.py  manifests.py  provider.py  sandbox.py
python/langchain_kubernetes/backends/: __init__.py  agent_sandbox.py  protocol.py  raw.py  raw_manifests.py  raw_transport.py
python/memory/: MEMORY.md
python/tests/integration/: conftest.py  test_network_policy.py  test_provider.py  test_sandbox.py
python/tests/unit/: test_cleanup.py  test_config.py  test_exec_transport.py  test_list_filters.py  test_manager.py  test_manifests.py  test_provider.py  test_raw_backend.py  test_raw_manifests.py  test_raw_transport.py  test_sandbox.py  test_thread_id.py  test_warm_pool.py
typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.cjs.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
typescript/examples/: basic-usage.ts  with-deepagents.ts
typescript/examples/k8s/: raw-mode-rbac.yaml  sandbox-router-rbac.yaml  sandbox-template.yaml
typescript/src/: config.ts  errors.ts  exec-transport.ts  index.ts  labels.ts  manager.ts  manifests.ts  provider.ts  router-client.ts  sandbox.ts  utils.ts
typescript/src/backends/: agent-sandbox.ts  raw-manifests.ts  raw-transport.ts  raw.ts  types.ts
typescript/tests/integration/: network-policy.test.ts  provider.test.ts  sandbox.test.ts  setup.ts
typescript/tests/unit/: agent-sandbox-backend.test.ts  cleanup.test.ts  config.test.ts  exec-transport.test.ts  manager.test.ts  manifests.test.ts  router-client.test.ts  thread-id.test.ts  warm-pool.test.ts
