[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-kubernetes"
version = "0.1.0"
description = "Kubernetes sandbox provider for the DeepAgents framework"
authors = ["bitkaio LLC"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/bitkaio/langchain/kubernetes-sandbox"
repository = "https://gitlab.com/bitkaio/langchain/kubernetes-sandbox"
keywords = ["langchain", "deepagents", "kubernetes", "sandbox", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "langchain_kubernetes" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
deepagents = ">=0.4.3"
k8s-agent-sandbox = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
pytest-mock = ">=3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring a live cluster (deselect with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
