[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-kubernetes"
version = "0.3.0"
description = "Kubernetes sandbox provider for the DeepAgents framework"
authors = ["bitkaio LLC"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/bitkaio/langchain/kubernetes-sandbox"
repository = "https://gitlab.com/bitkaio/langchain/kubernetes-sandbox"
keywords = ["langchain", "deepagents", "kubernetes", "sandbox", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "langchain_kubernetes" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
deepagents = ">=0.4.3"
k8s-agent-sandbox = {version = ">=0.1.0", optional = true}
kubernetes = {version = ">=31.0.0", optional = true}

[tool.poetry.extras]
agent-sandbox = ["k8s-agent-sandbox"]
raw = ["kubernetes"]
all = ["k8s-agent-sandbox", "kubernetes"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
pytest-mock = ">=3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring a live cluster (deselect with '-m not integration')",
    "agent_sandbox: marks tests requiring the agent-sandbox controller (deselect with '-m not agent_sandbox')",
    "raw_k8s: marks tests requiring a plain Kubernetes cluster (deselect with '-m not raw_k8s')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
